<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/button_material_dark"
    tools:context=".MainActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/heading"
        android:text="@string/cg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/accent_material_light"
        android:layout_alignParentTop="true"
        android:paddingTop="7dp"/>
    <Button
        android:id="@+id/fictionB"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@id/heading"
        android:paddingTop="10dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/fiction"
        android:onClick="ButtonOnClick"/>
    <Button
        android:id="@+id/nonfictionB"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@id/fictionB"
        android:paddingTop="10dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/nonfiction"
        android:onClick="ButtonOnClick"/>
    <Button
        android:id="@+id/crimeB"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@id/nonfictionB"
        android:paddingTop="10dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/crime"
        android:onClick="ButtonOnClick"/>
    <Button
        android:id="@+id/religionB"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@id/crimeB"
        android:paddingTop="10dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/religion"
        android:onClick="ButtonOnClick"/>
    <Button
        android:id="@+id/scienceficB"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@id/religionB"
        android:paddingTop="10dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/sciencefiction"
        android:onClick="ButtonOnClick"/>
    <Button
        android:id="@+id/politicsB"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@id/scienceficB"
        android:paddingTop="10dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/politics"
        android:onClick="ButtonOnClick"/>
    <Button
        android:id="@+id/romanticB"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@id/politicsB"
        android:paddingTop="10dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/romantic"
        android:onClick="ButtonOnClick"/>
    <Button
        android:id="@+id/travelB"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@id/romanticB"
        android:paddingTop="10dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/travel"
        android:onClick="ButtonOnClick"/>
    <Button
        android:id="@+id/humourB"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@id/travelB"
        android:paddingTop="10dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/humour"
        android:onClick="ButtonOnClick"/>
    <Button
        android:id="@+id/businessB"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@id/humourB"
        android:paddingTop="10dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/business"
        android:onClick="ButtonOnClick"/>

    <Button
        android:id="@+id/foodfitnessB"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@id/businessB"
        android:paddingTop="10dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/foodfitness"
        android:onClick="ButtonOnClick"/>

</RelativeLayout>
</ScrollView>