<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/detail5"
    android:fillViewport="true">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/detail5"
    tools:context="com.rozelle.android.readoholic.app.DetailedActivity">

    <TextView android:text="@string/Name"
        android:paddingTop="20dp"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_name" />
    <TextView android:text="@string/hello_world"
        android:textColor="@color/abc_search_url_text_normal"
        android:paddingTop="5dp"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_name"
        android:id="@+id/detail_text" />

    <TextView android:text="@string/AuthorName"
        android:paddingTop="20dp"
        android:textSize="15sp"
        android:layout_below="@id/detail_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_author" />
    <TextView android:text="@string/hello_world"
        android:textColor="@color/abc_search_url_text_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_below="@id/detail_author"
        android:id="@+id/detail_text1" />

    <TextView android:text="@string/PubName"
        android:paddingTop="20dp"
        android:textSize="15sp"
        android:layout_below="@id/detail_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_publisher" />
    <TextView android:text="@string/hello_world"
        android:paddingTop="5dp"
        android:textSize="20sp"
        android:textColor="@color/abc_search_url_text_normal"
        android:textStyle="italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_publisher"
        android:id="@+id/detail_text2" />

    <TextView android:text="@string/description"
        android:paddingTop="20dp"
        android:textSize="15sp"
        android:layout_below="@id/detail_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_description" />
    <TextView android:text="@string/hello_world"
        android:paddingTop="5dp"
        android:textSize="17sp"
        android:textStyle="italic"
        android:textColor="@color/abc_search_url_text_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_description"
        android:id="@+id/detail_text3" />

    <TextView android:text="@string/amazon"
        android:paddingTop="20dp"
        android:textSize="15sp"
        android:layout_below="@id/detail_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_amazon" />
    <TextView android:text="@string/hello_world"
        android:paddingTop="5dp"
        android:textSize="17sp"
        android:textStyle="italic"
        android:textColor="@color/abc_search_url_text_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_amazon"
        android:id="@+id/detail_text4"
        android:onClick="amazonmethod"
        android:clickable="true" />




</RelativeLayout>
</ScrollView>